Add comments/markdown to LIWC

--- a/liwc_psycholinguistic_emotion.ipynb
+++ b/liwc_psycholinguistic_emotion.ipynb
@@ -187,6 +187,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45c26090",
+   "metadata": {},
+   "source": [
+    "Prepare an output file to process using LIWC"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "f7ed6bbb",
@@ -215,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b92588b5",
    "metadata": {},
    "outputs": [
@@ -583,12 +591,12 @@
    ],
    "source": [
     "liwc_df = pd.read_csv(using_dataset[\"liwc_results_path\"])\n",
-    "liwc_df"
+    "liwc_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "146e3541",
    "metadata": {},
    "outputs": [
@@ -814,9 +822,18 @@
     }
    ],
    "source": [
+    "# Append the new LIWC stats columns onto the original dataframe\n",
     "full_df = dataset_df.set_index(using_dataset[\"id_col\"]).join(liwc_df.set_index(using_dataset[\"id_col\"]))\n",
     "full_df = full_df.reset_index()\n",
     "full_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4d1ae4d",
+   "metadata": {},
+   "source": [
+    "Get separate dataframes for each year"
    ]
   },
   {
@@ -1049,6 +1066,14 @@
    "source": [
     "years, years_dfs = get_groups(full_df, using_dataset[\"year_col\"])\n",
     "years_dfs[0].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bea806d0",
+   "metadata": {},
+   "source": [
+    "Get separate dataframes for each text type"
    ]
   },
   {
@@ -1288,7 +1313,9 @@
    "id": "d71478a9",
    "metadata": {},
    "source": [
-    "## Writing dataframes to excel spreadsheet"
+    "## Writing dataframes to excel spreadsheet\n",
+    "\n",
+    "Save to a single Excel file with tabs for each year"
    ]
   },
   {
@@ -1320,6 +1347,14 @@
     "writer = pd.ExcelWriter(output_path, engine=\"xlsxwriter\")\n",
     "save_years(writer, years, years_dfs)\n",
     "writer.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff322697",
+   "metadata": {},
+   "source": [
+    "For each text type, we separate further into dataframes per year, and save the Excel files as above"
    ]
   },
   {
