--- a/liwc_summary_plot.ipynb
+++ b/liwc_summary_plot.ipynb
@@ -14,11 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "69c4bf56",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a generator that will yield each year dataframe in order\n",
     "def get_years_dfs(misinfotext_path: str, fakespeak_path: str):\n",
     "    misinfotext_file = pd.ExcelFile(misinfotext_path)\n",
     "    \n",
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "902a7bd3",
    "metadata": {},
    "outputs": [],
@@ -48,17 +49,20 @@
     "summary_cols = [\"WC\", \"Analytic\", \"Clout\", \"Authentic\", \"Tone\", \"WPS\", \"BigWords\", \"Dic\", \"Linguistic\"]\n",
     "\n",
     "def get_summary_df(df: pd.DataFrame):\n",
+    "    \"\"\"Create a summary dataframe that has years as rows and each summary LIWC stat as columns, \n",
+    "    with the mean value for the LIWC stat over the year in each cell.\"\"\"\n",
     "    return df.groupby(\"year\")[summary_cols].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5cd6dbfd",
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_summary_plots(df: pd.DataFrame, graph_title: str, save_path: str):\n",
+    "    # Create a figure with 9 subplots, 3 rows by 3 columns\n",
     "    fig, axes = plt.subplots(\n",
     "        nrows=3, ncols=3, \n",
     "        figsize=(18, 9), \n",
@@ -66,15 +70,21 @@
     "\n",
     "    fig.suptitle(graph_title, fontsize=16)\n",
     "\n",
+    "    # Get the axes as a flat list so that they're easily accessible.\n",
+    "    # These axes represent each subplot.\n",
     "    axes_flat: list[Axes] = axes.flatten()\n",
     "\n",
     "    for i, col in enumerate(df.columns):\n",
     "        ax = axes_flat[i]\n",
+    "        \n",
     "        ax.plot(df.index, df[col], marker=\"o\")\n",
+    "        \n",
     "        ax.set_title(col)\n",
+    "        \n",
     "        ax.set_xlabel(\"year\")\n",
-    "        ax.grid(True)\n",
     "        ax.tick_params(axis=\"x\", rotation=45)\n",
+    "        \n",
+    "        ax.grid(True)\n",
     "\n",
     "    plt.tight_layout()\n",
     "\n",
