--- a/liwc_summary_stats.ipynb.ipynb
+++ b/liwc_summary_stats.ipynb.ipynb
@@ -13,11 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0fa9c701",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a generator that will yield each year dataframe in order\n",
     "def get_years_dfs(misinfotext_path: str, fakespeak_path: str):\n",
     "    misinfotext_file = pd.ExcelFile(misinfotext_path)\n",
     "    \n",
