--- a/lexical_density_stats.ipynb
+++ b/lexical_density_stats.ipynb
@@ -13,40 +13,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0fa9c701",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a generator that will yield each year dataframe in order\n",
-    "def get_years_dfs(misinfotext_path: str, fakespeak_path: str):\n",
-    "    misinfotext_file = pd.ExcelFile(misinfotext_path)\n",
-    "    \n",
-    "    for sheet in misinfotext_file.sheet_names:\n",
-    "        # Skip the summary tab, only care about raw data\n",
-    "        if sheet == \"Summary\":\n",
-    "            continue\n",
-    "        \n",
-    "        df = pd.read_excel(misinfotext_file, sheet_name=sheet)\n",
+    "def get_years_dfs(file_path: str):\n",
+    "    excel_file = pd.ExcelFile(file_path)\n",
     "\n",
-    "        # Add a column for year \n",
-    "        df[\"year\"] = sheet\n",
+    "    def generator():\n",
+    "        # Generator that goes through each year sheet,\n",
+    "        # adds a year column, then returns the dataframe\n",
     "        \n",
-    "        yield df\n",
+    "        for sheet in excel_file.sheet_names:\n",
+    "            if sheet == \"Summary\":\n",
+    "                continue\n",
+    "            \n",
+    "            df = pd.read_excel(excel_file, sheet_name=sheet)\n",
+    "\n",
+    "            # Add year column\n",
+    "            df[\"year\"] = sheet\n",
+    "\n",
+    "            yield df\n",
     "    \n",
-    "    fakespeak_file = pd.ExcelFile(fakespeak_path)\n",
-    "    \n",
-    "    for sheet in fakespeak_file.sheet_names:\n",
-    "        # Skip the summary tab, only care about raw data\n",
-    "        if sheet == \"Summary\":\n",
-    "            continue\n",
-    "        \n",
-    "        df = pd.read_excel(fakespeak_file, sheet_name=sheet)\n",
-    "        \n",
-    "        # Add a column for year \n",
-    "        df[\"year\"] = sheet\n",
-    "        \n",
-    "        yield df"
+    "    # Create a list from the generator and return\n",
+    "    return list(generator())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d6af979",
+   "metadata": {},
+   "source": [
+    "### First run stats analysis for all text types"
    ]
   },
   {
@@ -74,11 +73,7 @@
     }
    ],
    "source": [
-    "years_dfs = list(get_years_dfs(\n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/MisInfoText_lexical_density.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/Fakespeak_lexical_density.xlsx\",\n",
-    "))\n",
-    "\n",
+    "years_dfs = get_years_dfs(\"./output/lexical_density.xlsx\")\n",
     "run_stats_test(years_dfs, \"lexical_density\")"
    ]
   },
@@ -95,12 +90,20 @@
    "id": "28efc025",
    "metadata": {},
    "source": [
-    "#### Now repeat for specific text types"
+    "### Now repeat for specific text types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52318fc7",
+   "metadata": {},
+   "source": [
+    "#### News and blog"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "45ff78ae",
    "metadata": {},
    "outputs": [
@@ -117,17 +120,13 @@
        "KruskalResult(statistic=30.797479177648064, pvalue=0.009349434511875452)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "years_dfs = list(get_years_dfs(\n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/news_and_blog/MisInfoText_news_and_blog_lexical_density.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/news_and_blog/Fakespeak_news_and_blog_lexical_density.xlsx\",\n",
-    "))\n",
-    "\n",
+    "years_dfs = get_years_dfs(\"./output/news_and_blog/lexical_density_news_and_blog.xlsx\")\n",
     "run_stats_test(years_dfs, \"lexical_density\")"
    ]
   },
@@ -140,8 +139,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc9163c3",
+   "metadata": {},
+   "source": [
+    "#### Press release"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "558ac08a",
    "metadata": {},
    "outputs": [
@@ -158,17 +165,13 @@
        "KruskalResult(statistic=13.369140299858152, pvalue=0.5738089258069632)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "years_dfs = list(get_years_dfs(\n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/press_release/MisInfoText_press_release_lexical_density.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/press_release/Fakespeak_press_release_lexical_density.xlsx\",\n",
-    "))\n",
-    "\n",
+    "years_dfs = get_years_dfs(\"./output/press_release/lexical_density_press_release.xlsx\")\n",
     "run_stats_test(years_dfs, \"lexical_density\")"
    ]
   },
@@ -181,8 +184,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "35349ac8",
+   "metadata": {},
+   "source": [
+    "#### Social media"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8f552433",
    "metadata": {},
    "outputs": [
@@ -199,17 +210,13 @@
        "KruskalResult(statistic=71.30514992661972, pvalue=4.6120428422337525e-10)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "years_dfs = list(get_years_dfs(\n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/social_media/MisInfoText_social_media_lexical_density.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/social_media/Fakespeak_social_media_lexical_density.xlsx\",\n",
-    "))\n",
-    "\n",
+    "years_dfs = get_years_dfs(\"./output/social_media/lexical_density_social_media.xlsx\")\n",
     "run_stats_test(years_dfs, \"lexical_density\")"
    ]
   },
