Update lexical diversity to output combined analysis file

--- a/lexical_density_stats.ipynb
+++ b/lexical_density_stats.ipynb
@@ -8,36 +8,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from helpers import run_stats_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "0fa9c701",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_years_dfs(file_path: str):\n",
-    "    excel_file = pd.ExcelFile(file_path)\n",
-    "\n",
-    "    def generator():\n",
-    "        # Generator that goes through each year sheet,\n",
-    "        # adds a year column, then returns the dataframe\n",
-    "        \n",
-    "        for sheet in excel_file.sheet_names:\n",
-    "            if sheet == \"Summary\":\n",
-    "                continue\n",
-    "            \n",
-    "            df = pd.read_excel(excel_file, sheet_name=sheet)\n",
-    "\n",
-    "            # Add year column\n",
-    "            df[\"year\"] = sheet\n",
-    "\n",
-    "            yield df\n",
-    "    \n",
-    "    # Create a list from the generator and return\n",
-    "    return list(generator())"
+    "from helpers import get_years_dfs, run_stats_test"
    ]
   },
   {
@@ -50,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "19c82a28",
    "metadata": {},
    "outputs": [
@@ -67,7 +38,7 @@
        "KruskalResult(statistic=73.93307300508717, pvalue=8.819211344509398e-10)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "45ff78ae",
    "metadata": {},
    "outputs": [
@@ -120,7 +91,7 @@
        "KruskalResult(statistic=30.797479177648064, pvalue=0.009349434511875452)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "558ac08a",
    "metadata": {},
    "outputs": [
@@ -165,7 +136,7 @@
        "KruskalResult(statistic=13.369140299858152, pvalue=0.5738089258069632)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "8f552433",
    "metadata": {},
    "outputs": [
@@ -210,7 +181,7 @@
        "KruskalResult(statistic=71.30514992661972, pvalue=4.6120428422337525e-10)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
