--- a/lexical_diversity_analysis.ipynb
+++ b/lexical_diversity_analysis.ipynb
@@ -10,7 +10,7 @@
     "import spacy\n",
     "from spacy.tokens.doc import Doc\n",
     "import pandas as pd\n",
-    "from helpers import load_data, get_groups, is_word"
+    "from helpers import load_data, get_groups"
    ]
   },
   {
@@ -130,9 +130,9 @@
    "id": "c28e0e13",
    "metadata": {},
    "source": [
-    "## Calculating lexical density using spacy\n",
+    "## Calculating lexical diversity using spacy\n",
     "\n",
-    "Lexical density is calculated by number of lexical words (nouns, verbs, adjectives, adverbs) divided by number of total words, excluding punctuation."
+    "Lexical diversity is calculated by number of word types (unique lemmas) divided by number of word tokens (total words), excluding punctuation."
    ]
   },
   {
@@ -153,7 +153,7 @@
     }
    ],
    "source": [
-    "nlp = spacy.load('en_core_web_md')"
+    "nlp = spacy.load(\"en_core_web_md\")"
    ]
   },
   {
@@ -168,12 +168,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19e079cf",
+   "id": "23180fcd",
    "metadata": {},
    "source": [
-    "We count lexical (\"content\") words to be proper nouns, nouns, verbs, adjectives, and adverbs.\n",
-    "\n",
-    "We then calculate lexical density by dividing the number of lexical words by total number of words. This excludes non-word tokens like punctuation."
+    "Lexical diversity is defined as the number of types divided by number of tokens, including punctuation"
    ]
   },
   {
@@ -183,18 +181,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lexical_pos = [\"PROPN\", \"NOUN\", \"VERB\", \"ADJ\", \"ADV\"]\n",
-    "\n",
-    "def calculate_lexical_density(doc: Doc):\n",
-    "    word_tokens = [token for token in doc if is_word(token)]\n",
-    "    \n",
-    "    num_lexical_items = len([\n",
-    "        token\n",
-    "        for token in word_tokens\n",
-    "        if token.pos_ in lexical_pos\n",
-    "    ])\n",
-    "\n",
-    "    return num_lexical_items / len(word_tokens)"
+    "def calculate_lexical_diversity(doc: Doc):\n",
+    "    word_types = set(token.lemma_ for token in doc)\n",
+    "    return len(word_types) / len(doc)"
    ]
   },
   {
@@ -230,7 +219,7 @@
        "      <th>text_type</th>\n",
        "      <th>year</th>\n",
        "      <th>doc</th>\n",
-       "      <th>lexical_density</th>\n",
+       "      <th>lexical_diversity</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -242,7 +231,7 @@
        "      <td>News and blog</td>\n",
        "      <td>2016</td>\n",
        "      <td>(Residents, of, multiple, states, will, be, as...</td>\n",
-       "      <td>0.548057</td>\n",
+       "      <td>0.331570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -252,7 +241,7 @@
        "      <td>Press release</td>\n",
        "      <td>2016</td>\n",
        "      <td>(Sacramento, ,, CA, -, United, States, Senator...</td>\n",
-       "      <td>0.638298</td>\n",
+       "      <td>0.631336</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -262,7 +251,7 @@
        "      <td>News and blog</td>\n",
        "      <td>2017</td>\n",
        "      <td>(We, should, anticipate, black, and, gray, mar...</td>\n",
-       "      <td>0.579096</td>\n",
+       "      <td>0.501211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -272,7 +261,7 @@
        "      <td>News and blog</td>\n",
        "      <td>2017</td>\n",
        "      <td>(As, a, ballot, initiative, calling, for, repe...</td>\n",
-       "      <td>0.607623</td>\n",
+       "      <td>0.451292</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -282,7 +271,7 @@
        "      <td>Press release</td>\n",
        "      <td>2017</td>\n",
        "      <td>(WASHINGTON, ,, DC,  , The, House, of, Represe...</td>\n",
-       "      <td>0.577875</td>\n",
+       "      <td>0.421189</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -302,7 +291,7 @@
        "      <td>Social media</td>\n",
        "      <td>2023</td>\n",
        "      <td>(A, great, lesson, in, Optics, 101, :, The, Mo...</td>\n",
-       "      <td>0.520295</td>\n",
+       "      <td>0.389937</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2957</th>\n",
@@ -312,7 +301,7 @@
        "      <td>Social media</td>\n",
        "      <td>2023</td>\n",
        "      <td>(“, One, of, these, Joe, ’s, is, not, like, th...</td>\n",
-       "      <td>0.360000</td>\n",
+       "      <td>0.750000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2958</th>\n",
@@ -322,7 +311,7 @@
        "      <td>Social media</td>\n",
        "      <td>2020</td>\n",
        "      <td>(Autopsies, Prove, that, COVID-19, is, a, Diss...</td>\n",
-       "      <td>0.538576</td>\n",
+       "      <td>0.386700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2959</th>\n",
@@ -332,7 +321,7 @@
        "      <td>Social media</td>\n",
        "      <td>2021</td>\n",
        "      <td>(She, collapsed, when, she, saw, jfk, jr, ., a...</td>\n",
-       "      <td>0.480519</td>\n",
+       "      <td>0.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2960</th>\n",
@@ -342,7 +331,7 @@
        "      <td>Social media</td>\n",
        "      <td>2023</td>\n",
        "      <td>(ANYBODY, ELSE, FIND, IT, FUNNY, THAT, ISRAEL,...</td>\n",
-       "      <td>0.584906</td>\n",
+       "      <td>0.836364</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -389,18 +378,18 @@
        "2959                                                NaN   Social media  2021   \n",
        "2960                                                NaN   Social media  2023   \n",
        "\n",
-       "                                                    doc  lexical_density  \n",
-       "0     (Residents, of, multiple, states, will, be, as...         0.548057  \n",
-       "1     (Sacramento, ,, CA, -, United, States, Senator...         0.638298  \n",
-       "2     (We, should, anticipate, black, and, gray, mar...         0.579096  \n",
-       "3     (As, a, ballot, initiative, calling, for, repe...         0.607623  \n",
-       "4     (WASHINGTON, ,, DC,  , The, House, of, Represe...         0.577875  \n",
-       "...                                                 ...              ...  \n",
-       "2956  (A, great, lesson, in, Optics, 101, :, The, Mo...         0.520295  \n",
-       "2957  (“, One, of, these, Joe, ’s, is, not, like, th...         0.360000  \n",
-       "2958  (Autopsies, Prove, that, COVID-19, is, a, Diss...         0.538576  \n",
-       "2959  (She, collapsed, when, she, saw, jfk, jr, ., a...         0.480519  \n",
-       "2960  (ANYBODY, ELSE, FIND, IT, FUNNY, THAT, ISRAEL,...         0.584906  \n",
+       "                                                    doc  lexical_diversity  \n",
+       "0     (Residents, of, multiple, states, will, be, as...           0.331570  \n",
+       "1     (Sacramento, ,, CA, -, United, States, Senator...           0.631336  \n",
+       "2     (We, should, anticipate, black, and, gray, mar...           0.501211  \n",
+       "3     (As, a, ballot, initiative, calling, for, repe...           0.451292  \n",
+       "4     (WASHINGTON, ,, DC,  , The, House, of, Represe...           0.421189  \n",
+       "...                                                 ...                ...  \n",
+       "2956  (A, great, lesson, in, Optics, 101, :, The, Mo...           0.389937  \n",
+       "2957  (“, One, of, these, Joe, ’s, is, not, like, th...           0.750000  \n",
+       "2958  (Autopsies, Prove, that, COVID-19, is, a, Diss...           0.386700  \n",
+       "2959  (She, collapsed, when, she, saw, jfk, jr, ., a...           0.666667  \n",
+       "2960  (ANYBODY, ELSE, FIND, IT, FUNNY, THAT, ISRAEL,...           0.836364  \n",
        "\n",
        "[3646 rows x 7 columns]"
       ]
@@ -411,13 +400,13 @@
     }
    ],
    "source": [
-    "dataset_df[\"lexical_density\"] = dataset_df[\"doc\"].apply(calculate_lexical_density)\n",
+    "dataset_df[\"lexical_diversity\"] = dataset_df[\"doc\"].apply(calculate_lexical_diversity)\n",
     "dataset_df"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "09c53d9b",
+   "id": "6a02563b",
    "metadata": {},
    "source": [
     "Get separate dataframes for each year"
@@ -426,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dfc509c4",
+   "id": "99e51d81",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +445,7 @@
        "      <th>text_type</th>\n",
        "      <th>year</th>\n",
        "      <th>doc</th>\n",
-       "      <th>lexical_density</th>\n",
+       "      <th>lexical_diversity</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -468,7 +457,7 @@
        "      <td>Press release</td>\n",
        "      <td>2009</td>\n",
        "      <td>(Washington, ,, D.C., ,, Mar, 25, -, In, respo...</td>\n",
-       "      <td>0.556863</td>\n",
+       "      <td>0.530405</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>434</th>\n",
@@ -478,7 +467,7 @@
        "      <td>News and blog</td>\n",
        "      <td>2009</td>\n",
        "      <td>(When, most, Americans, talk, about, the, need...</td>\n",
-       "      <td>0.580347</td>\n",
+       "      <td>0.351220</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>435</th>\n",
@@ -488,7 +477,7 @@
        "      <td>News and blog</td>\n",
        "      <td>2009</td>\n",
        "      <td>(A, number, of, people, in, the, news, analysi...</td>\n",
-       "      <td>0.515021</td>\n",
+       "      <td>0.513308</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>436</th>\n",
@@ -498,7 +487,7 @@
        "      <td>Social media</td>\n",
        "      <td>2009</td>\n",
        "      <td>(Yesterday, President, Obama, responded, to, m...</td>\n",
-       "      <td>0.542100</td>\n",
+       "      <td>0.344487</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>437</th>\n",
@@ -508,7 +497,7 @@
        "      <td>News and blog</td>\n",
        "      <td>2009</td>\n",
        "      <td>(Secretary, of, Defense, Robert, Gates, is, ex...</td>\n",
-       "      <td>0.531746</td>\n",
+       "      <td>0.424444</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -536,12 +525,12 @@
        "436                                                NaN   Social media  2009   \n",
        "437  Military to Pledge Oath To Obama, Not Constitu...  News and blog  2009   \n",
        "\n",
-       "                                                   doc  lexical_density  \n",
-       "433  (Washington, ,, D.C., ,, Mar, 25, -, In, respo...         0.556863  \n",
-       "434  (When, most, Americans, talk, about, the, need...         0.580347  \n",
-       "435  (A, number, of, people, in, the, news, analysi...         0.515021  \n",
-       "436  (Yesterday, President, Obama, responded, to, m...         0.542100  \n",
-       "437  (Secretary, of, Defense, Robert, Gates, is, ex...         0.531746  "
+       "                                                   doc  lexical_diversity  \n",
+       "433  (Washington, ,, D.C., ,, Mar, 25, -, In, respo...           0.530405  \n",
+       "434  (When, most, Americans, talk, about, the, need...           0.351220  \n",
+       "435  (A, number, of, people, in, the, news, analysi...           0.513308  \n",
+       "436  (Yesterday, President, Obama, responded, to, m...           0.344487  \n",
+       "437  (Secretary, of, Defense, Robert, Gates, is, ex...           0.424444  "
       ]
      },
      "execution_count": 7,
@@ -556,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8d0de8a",
+   "id": "0afdbc2d",
    "metadata": {},
    "source": [
     "Get separate dataframes for each text type"
@@ -565,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6da6f69d",
+   "id": "1fc8b086",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +584,7 @@
        "      <th>text_type</th>\n",
        "      <th>year</th>\n",
        "      <th>doc</th>\n",
-       "      <th>lexical_density</th>\n",
+       "      <th>lexical_diversity</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -607,7 +596,7 @@
        "      <td>News and blog</td>\n",
        "      <td>2016</td>\n",
        "      <td>(Residents, of, multiple, states, will, be, as...</td>\n",
-       "      <td>0.548057</td>\n",
+       "      <td>0.331570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -617,7 +606,7 @@
        "      <td>News and blog</td>\n",
        "      <td>2017</td>\n",
        "      <td>(We, should, anticipate, black, and, gray, mar...</td>\n",
-       "      <td>0.579096</td>\n",
+       "      <td>0.501211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -627,7 +616,7 @@
        "      <td>News and blog</td>\n",
        "      <td>2017</td>\n",
        "      <td>(As, a, ballot, initiative, calling, for, repe...</td>\n",
-       "      <td>0.607623</td>\n",
+       "      <td>0.451292</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -637,7 +626,7 @@
        "      <td>News and blog</td>\n",
        "      <td>2017</td>\n",
        "      <td>(Recently, ,, a, group, of, special, interests...</td>\n",
-       "      <td>0.573099</td>\n",
+       "      <td>0.462329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -647,7 +636,7 @@
        "      <td>News and blog</td>\n",
        "      <td>2017</td>\n",
        "      <td>(COSTA, MESA, ,, Orange, County,  , It, was, a...</td>\n",
-       "      <td>0.562782</td>\n",
+       "      <td>0.412510</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -675,12 +664,12 @@
        "6  Repeal Californias gas tax increase, says GOP ...  News and blog  2017   \n",
        "7  The pro-Russia, pro-weed, pro-Assange GOP cong...  News and blog  2017   \n",
        "\n",
-       "                                                 doc  lexical_density  \n",
-       "0  (Residents, of, multiple, states, will, be, as...         0.548057  \n",
-       "2  (We, should, anticipate, black, and, gray, mar...         0.579096  \n",
-       "3  (As, a, ballot, initiative, calling, for, repe...         0.607623  \n",
-       "6  (Recently, ,, a, group, of, special, interests...         0.573099  \n",
-       "7  (COSTA, MESA, ,, Orange, County,  , It, was, a...         0.562782  "
+       "                                                 doc  lexical_diversity  \n",
+       "0  (Residents, of, multiple, states, will, be, as...           0.331570  \n",
+       "2  (We, should, anticipate, black, and, gray, mar...           0.501211  \n",
+       "3  (As, a, ballot, initiative, calling, for, repe...           0.451292  \n",
+       "6  (Recently, ,, a, group, of, special, interests...           0.462329  \n",
+       "7  (COSTA, MESA, ,, Orange, County,  , It, was, a...           0.412510  "
       ]
      },
      "execution_count": 8,
@@ -695,29 +684,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69526a7a",
+   "id": "3ead15a4",
    "metadata": {},
    "source": [
-    "Using pandas's built-in `.describe()` method for dataframes to get summary stats on lexical density for each year."
+    "Using pandas's built-in `.describe()` method for dataframes to get summary stats on lexical diversity for each year."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8f858107",
+   "id": "7714bc0a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_summary_df(dfs: list[pd.DataFrame], years: list[int]):\n",
     "    return pd.DataFrame(\n",
-    "        [df[\"lexical_density\"].describe() for df in dfs],\n",
+    "        [df[\"lexical_diversity\"].describe() for df in dfs],\n",
     "        index=pd.Index(data=years, name=\"year\")\n",
     "    )"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d5f720cb",
+   "id": "d78d0c0a",
    "metadata": {},
    "source": [
     "## Writing dataframes to excel spreadsheet\n",
@@ -728,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "da99d556",
+   "id": "9ac2ed91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +727,7 @@
     "            writer,\n",
     "            sheet_name=str(year),\n",
     "            index=False,\n",
-    "            columns=[\"id\", \"lexical_density\", \"year\"]\n",
+    "            columns=[\"id\", \"lexical_diversity\", \"year\"]\n",
     "        )\n",
     "\n",
     "    summary_df = get_summary_df(dfs, years)\n",
@@ -748,18 +737,18 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2585d2c2",
+   "id": "059698c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "writer = pd.ExcelWriter(\"./output/lexical_density.xlsx\", engine=\"xlsxwriter\")\n",
+    "writer = pd.ExcelWriter(\"./output/lexical_diversity.xlsx\", engine=\"xlsxwriter\")\n",
     "save_years(writer, years, years_dfs)\n",
     "writer.close()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b5b120b3",
+   "id": "e44a7e86",
    "metadata": {},
    "source": [
     "For each text type, we separate further into dataframes per year, and save the Excel files as above"
@@ -768,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4c919bd3",
+   "id": "9a254e6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,18 +766,10 @@
     "\n",
     "    type_str = str(type).lower().replace(\" \", \"_\")\n",
     "\n",
-    "    writer = pd.ExcelWriter(f\"./output/{type_str}/lexical_density_{type_str}.xlsx\", engine=\"xlsxwriter\")\n",
+    "    writer = pd.ExcelWriter(f\"./output/{type_str}/lexical_diversity_{type_str}.xlsx\", engine=\"xlsxwriter\")\n",
     "    save_years(writer, years, years_dfs)\n",
     "    writer.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5842507e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
