--- a/lexical_diversity_stats.ipynb
+++ b/lexical_diversity_stats.ipynb
@@ -8,50 +8,20 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from helpers import run_stats_test"
+    "from helpers import get_years_dfs, run_stats_test"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0fa9c701",
+   "cell_type": "markdown",
+   "id": "290be798",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Create a generator that will yield each year dataframe in order\n",
-    "def get_years_dfs(misinfotext_path: str, fakespeak_path: str):\n",
-    "    misinfotext_file = pd.ExcelFile(misinfotext_path)\n",
-    "    \n",
-    "    for sheet in misinfotext_file.sheet_names:\n",
-    "        # Skip the summary tab, only care about raw data\n",
-    "        if sheet == \"Summary\":\n",
-    "            continue\n",
-    "        \n",
-    "        df = pd.read_excel(misinfotext_file, sheet_name=sheet)\n",
-    "\n",
-    "        # Add a column for year \n",
-    "        df[\"year\"] = sheet\n",
-    "\n",
-    "        yield df\n",
-    "    \n",
-    "    fakespeak_file = pd.ExcelFile(fakespeak_path)\n",
-    "    \n",
-    "    for sheet in fakespeak_file.sheet_names:\n",
-    "        # Skip the summary tab, only care about raw data\n",
-    "        if sheet == \"Summary\":\n",
-    "            continue\n",
-    "        \n",
-    "        df = pd.read_excel(fakespeak_file, sheet_name=sheet)\n",
-    "        \n",
-    "        # Add a column for year \n",
-    "        df[\"year\"] = sheet\n",
-    "        \n",
-    "        yield df"
+    "### First run stats analysis for all text types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "19c82a28",
    "metadata": {},
    "outputs": [
@@ -68,17 +38,13 @@
        "KruskalResult(statistic=433.93661071709835, pvalue=5.005550387201393e-83)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "years_dfs = list(get_years_dfs(\n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/MisInfoText_lexical_diversity.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/Fakespeak_lexical_diversity.xlsx\",\n",
-    "))\n",
-    "\n",
+    "years_dfs = get_years_dfs(\"./output/lexical_diversity.xlsx\")\n",
     "run_stats_test(years_dfs, \"lexical_diversity\")"
    ]
   },
@@ -92,16 +58,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed8a4301",
+   "id": "a4d690e6",
    "metadata": {},
    "source": [
-    "#### Now repeat for specific text types"
+    "### Now repeat for specific text types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc0b8b48",
+   "metadata": {},
+   "source": [
+    "#### News and blog"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0323888a",
+   "execution_count": 3,
+   "id": "4ab52d62",
    "metadata": {},
    "outputs": [
     {
@@ -117,17 +91,13 @@
        "KruskalResult(statistic=70.1398526835067, pvalue=4.21801800885099e-09)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "years_dfs = list(get_years_dfs(\n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/news_and_blog/MisInfoText_news_and_blog_lexical_diversity.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/news_and_blog/Fakespeak_news_and_blog_lexical_diversity.xlsx\",\n",
-    "))\n",
-    "\n",
+    "years_dfs = get_years_dfs(\"./output/news_and_blog/lexical_diversity_news_and_blog.xlsx\")\n",
     "run_stats_test(years_dfs, \"lexical_diversity\")"
    ]
   },
@@ -140,8 +110,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e24ad2b5",
+   "metadata": {},
+   "source": [
+    "#### Press release"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "44f6a9b0",
    "metadata": {},
    "outputs": [
@@ -158,17 +136,13 @@
        "KruskalResult(statistic=18.72725888497128, pvalue=0.22636029163228788)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "years_dfs = list(get_years_dfs(\n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/press_release/MisInfoText_press_release_lexical_diversity.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/press_release/Fakespeak_press_release_lexical_diversity.xlsx\",\n",
-    "))\n",
-    "\n",
+    "years_dfs = get_years_dfs(\"./output/press_release/lexical_diversity_press_release.xlsx\")\n",
     "run_stats_test(years_dfs, \"lexical_diversity\")"
    ]
   },
@@ -181,8 +155,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe31cc91",
+   "metadata": {},
+   "source": [
+    "#### Social media"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "bfc9a488",
    "metadata": {},
    "outputs": [
@@ -199,17 +181,13 @@
        "KruskalResult(statistic=59.81511504243559, pvalue=5.668890196658151e-08)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "years_dfs = list(get_years_dfs(\n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/social_media/MisInfoText_social_media_lexical_diversity.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/social_media/Fakespeak_social_media_lexical_diversity.xlsx\",\n",
-    "))\n",
-    "\n",
+    "years_dfs = get_years_dfs(\"./output/social_media/lexical_diversity_social_media.xlsx\")\n",
     "run_stats_test(years_dfs, \"lexical_diversity\")"
    ]
   },
