Update all caps to output single file

--- a/all_caps_stats.ipynb
+++ b/all_caps_stats.ipynb
@@ -8,50 +8,43 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from helpers import run_stats_test"
+    "from helpers import get_years_dfs, run_stats_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18d13f90",
+   "metadata": {},
+   "source": [
+    "### First run stats analysis for all text types"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3e17ab2c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_years_dfs(misinfotext_path: str, fakespeak_path: str):\n",
-    "    misinfotext_file = pd.ExcelFile(misinfotext_path)\n",
-    "    \n",
-    "    for sheet in misinfotext_file.sheet_names:\n",
-    "        if sheet == \"Proportion Summary\":\n",
-    "            continue\n",
-    "        \n",
-    "        df = pd.read_excel(misinfotext_file, sheet_name=sheet)\n",
-    "        df[\"year\"] = sheet\n",
-    "        yield df\n",
-    "    \n",
-    "    fakespeak_file = pd.ExcelFile(fakespeak_path)\n",
-    "    \n",
-    "    for sheet in fakespeak_file.sheet_names:\n",
-    "        if sheet == \"Proportion Summary\":\n",
-    "            continue\n",
-    "        \n",
-    "        df = pd.read_excel(fakespeak_file, sheet_name=sheet)\n",
-    "        df[\"year\"] = sheet\n",
-    "        yield df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ed2c2ea4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running test for non-normal distributions\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "KruskalResult(statistic=61.87850440003496, pvalue=1.1955585358356085e-07)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "years_dfs = list(get_years_dfs(\n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/MisInfoText_all_caps.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/Fakespeak_all_caps.xlsx\",\n",
-    "))\n",
-    "\n",
+    "years_dfs = get_years_dfs(\"./output/all_caps.xlsx\")\n",
     "run_stats_test(years_dfs, \"proportion_upper_to_alpha_tokens\")"
    ]
   },
@@ -68,12 +61,20 @@
    "id": "ac07f7d6",
    "metadata": {},
    "source": [
-    "#### Now repeat for specific text types"
+    "### Now repeat for specific text types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f17f487",
+   "metadata": {},
+   "source": [
+    "#### News and blog"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "51353857",
    "metadata": {},
    "outputs": [
@@ -90,17 +91,13 @@
        "KruskalResult(statistic=48.99920656465037, pvalue=1.7525332578570646e-05)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "years_dfs = list(get_years_dfs(\n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/news_and_blog/MisInfoText_news_and_blog_all_caps.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/news_and_blog/Fakespeak_news_and_blog_all_caps.xlsx\",\n",
-    "))\n",
-    "\n",
+    "years_dfs = get_years_dfs(\"./output/news_and_blog/all_caps_news_and_blog.xlsx\")\n",
     "run_stats_test(years_dfs, \"proportion_upper_to_alpha_tokens\")"
    ]
   },
@@ -113,8 +110,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6b36b066",
+   "metadata": {},
+   "source": [
+    "#### Press release"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "105e2a39",
    "metadata": {},
    "outputs": [
@@ -131,17 +136,13 @@
        "KruskalResult(statistic=13.584180375499589, pvalue=0.5572703858842993)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "years_dfs = list(get_years_dfs(\n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/press_release/MisInfoText_press_release_all_caps.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/press_release/Fakespeak_press_release_all_caps.xlsx\",\n",
-    "))\n",
-    "\n",
+    "years_dfs = get_years_dfs(\"./output/press_release/all_caps_press_release.xlsx\")\n",
     "run_stats_test(years_dfs, \"proportion_upper_to_alpha_tokens\")"
    ]
   },
@@ -154,8 +155,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1fac3ec",
+   "metadata": {},
+   "source": [
+    "#### Social media"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "028a7ddc",
    "metadata": {},
    "outputs": [
@@ -172,17 +181,13 @@
        "KruskalResult(statistic=14.765019540824804, pvalue=0.32225093148201184)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "years_dfs = list(get_years_dfs(\n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/social_media/MisInfoText_social_media_all_caps.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/social_media/Fakespeak_social_media_all_caps.xlsx\",\n",
-    "))\n",
-    "\n",
+    "years_dfs = get_years_dfs(\"./output/social_media/all_caps_social_media.xlsx\")\n",
     "run_stats_test(years_dfs, \"proportion_upper_to_alpha_tokens\")"
    ]
   },
